--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 <button type="submit" id="login">Log in</button>
                 <a href="#">Forgotten password?</a>
                 <div class="garis"></div>
+
+                <!-- garis mobile -->
+                <div class="garismobile">
+                    <p>or</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
                 <div class="new">
                     <button type="button" id="akun">Create new account</button>
                 </div>
