--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/registrasi.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <title>Form Login</title>
+    <link rel="icon" href="img/logo.png" type="image" >
+    <title>Form facebook</title>
 </head>
 <body>
 
